--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,10 @@ lightgbm
 bayesian-optimization
 
 # LLM Client
-# 이 부분을 추가하세요!
 google-generativeai
+# 이 부분을 추가하세요!
+openai
 
 # Utilities
 tqdm
+
