--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,10 @@ bayesian-optimization
 
 # LLM Client
 google-generativeai
-# 이 부분을 추가하세요!
 openai
+requests # 이 부분을 추가하세요!
 
 # Utilities
 tqdm
+
 
